--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background: #f5f5f5;
+    background: #fff;
   }
 
   nav {
