--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
   .logo-font {
     font-family: "Nosifer", sans-serif;
-    color: #FF1A1A; /* warna merah darah terang */
+    color: #E50914; /* warna merah darah terang */
     text-shadow: none;
     font-size: 5vw;
   }
